# SF-Core

./: Animation.cpp  Animation.hpp  BaseScreen.cpp  BaseScreen.hpp  ButtonTextPair.cpp  ButtonTextPair.hpp  CMakeLists.txt  Core.hpp  Helpers.cpp  Helpers.hpp  Image.cpp  Image.hpp  OriginFunc.cpp  OriginFunc.hpp  Pch.hpp  Projectile.hpp  README.md  RoundedRectangle.cpp  RoundedRectangle.hpp  TgRenderConfig.hpp  WindowManager.cpp  WindowManager.hpp
